* Improvement: Add generators for copying view templates into host application

New in 0.0.12:

* Improvement: Implement searching over string and email attributes
* Improvement: Add pagination to index views
  * Customizable by overriding `Admin::ApplicationController#records_per_page`
  * Customizable through HTTP param `per_page`
* Imprrovement: Add sorting by column
  * Clicking on the column header multiple times changes sort direction
* Improvement: Generate resource-specific controller subclasses.
* Improvement: Add a `limit` option to `Administrate::Field::HasMany`,
  with a default of 5.
  This option limits the number of items shown in the relationship table.
* UI: Remove logo from the sidebar
* UI: Fix alignment issue with string fields on show pages
* Bug Fix: Fix a bug where `nil` in a string field would cause a 500 error.
* Bug Fix: Stop supporting `has_one` fields, which crashed the `update` action

New in 0.0.11:

* Improvement: Add `Administrate::Field::Boolean` for displaying boolean data.
* Improvement: support a `class_name` option in `belongs_to` relationships.
  The class name is now detected by the dashboard generator.

New in 0.0.10:

* Improvement: support lookup for models that have a custom `to_param` method.
* Improvement: Truncate strings on index page,
  with an optional argument for truncation length
* Improvement: Generate a single controller to serve all resources,
  to reduce noise after running the install generator.
* Improvement: Add `Administrate::Field::DateTime`
  for displaying dates, times, and datetimes.
* Improvement: Add `Administrate::Field::Number`
  for displaying currency, integers, and floats.
  Supports options `prefix` and `decimals`.
* Improvement: Generate a single controller to serve all resources,
  to reduce noise after running the install generator.
* Improvement: Don't display redundant attributes for belongs_to relationships,
  such as `post_id` or `post_type`.