@@ -13,6 +13,5 @@
 
 @import "layout";
 @import "sidebar";
-@import "show";
 
 @import "components/components";
