@@ -1,11 +1,5 @@
-.cell-label,
-.attribute-label {
-  color: $hint-grey;
-  font-size: $small-font-size;
-  font-weight: $normal-font-weight;
-  letter-spacing: 0.0357em;
-  position: relative;
-  text-transform: uppercase;
+.cell-label {
+  @include data-label;
 
   a {
     @include fill-parent;
