@@ -1,0 +1,8 @@
+@mixin data-label {
+  color: $hint-grey;
+  font-size: $small-font-size;
+  font-weight: $normal-font-weight;
+  letter-spacing: 0.0357em;
+  position: relative;
+  text-transform: uppercase;
+}
